--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>This is sample HTML!</p>
-        <p>This is a new feature!</p>
+        <p>This is a new feature! (button)</p>
     </body>
 </html>
